--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <!--Header-->
     <header>
-    <nav>
         <a href="" lang="en">WEBSTUDIO</a>
+    <nav>
+    
     <ul>
         <li><a href="">Студия</a></li>
         <li><a href="">Портфолио</a></li>
@@ -83,8 +84,10 @@
         <a href="" lang="en">WEBSTUDIO</a>
         <address>
              <p> г. Киев, пр-т Леси Украинки, 26</p>
-            <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+             <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </address>
     </footer>
 
